hack/cfn/cloud9-dynamic-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation template for dynamic Cloud 9 setup. Creates and bootstraps Cloud9 instance. https://github.com/aws-samples/aws-cloud9-bootstrapping-example
Parameters:  
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: "cnoe-workshop"

  DefaultIdpBuilderBranch:
    Description: Default idpbuilder git branch to use when cloning the repo
    Type: String
    Default: "main"

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.192.0.0/16

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.10.0/24

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.192.11.0/24

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.192.20.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.192.21.0/24

  WorkshopInstanceType:
    Description: Workshop Cloud9 instance type
    Type: String
    Default: t3.medium
    AllowedValues:
      - t2.micro
      - t3.micro
      - t3.small
      - t3.medium
      - t3.large
      - m5.large
      - m5.2xlarge
      - m5.4xlarge
    ConstraintDescription: Must be a valid Cloud9 instance type

  WorkshopInstanceVolumeSize: 
    Type: Number
    Description: The Size in GB of the Cloud9 Instance Volume. 
    Default: 50

  WorkshopInstanceOwner: 
    Type: String
    Description: Assumed Role and Username of Cloud9 Owner, e.g. for EE - TeamRole/MasterKey or Isengard - Superuser/username-Isengard
    Default: WSParticipantRole/Participant

Resources:

################## VPC Setup #################
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2


  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ1)

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ2)

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  NoIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "no-ingress-sg"
      GroupDescription: "Security group with no ingress rule"
      VpcId: !Ref VPC

################## PERMISSIONS AND ROLES #################
  WorkshopRole:
    Type: AWS::IAM::Role
    Properties:
      Tags:
        - Key: Environment
          Value: AWS Workshop
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
            - ssm.amazonaws.com
            - cloud9.amazonaws.com
          Action:
          - sts:AssumeRole
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/AdministratorAccess
      - arn:aws:iam::aws:policy/AWSCloud9SSMInstanceProfile
      Path: "/service-role/"
      #### REMOVE ROLENAME TO BE MORE GENERIC ####
      RoleName: 'test-c9-template-Admin-Access'

  WorkshopLambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - lambda.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      Policies:
      - PolicyName:
          Fn::Join:
          - ''
          - - WorkshopLambdaPolicy-
            - Ref: AWS::Region
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            Resource: arn:aws:logs:*:*:*
          - Effect: Allow
            Action:
            - cloudformation:DescribeStacks
            - cloudformation:DescribeStackEvents
            - cloudformation:DescribeStackResource
            - cloudformation:DescribeStackResources
            - ec2:DescribeInstances
            - ec2:RebootInstances
            - ec2:AssociateIamInstanceProfile
            - ec2:ModifyInstanceAttribute
            - ec2:ReplaceIamInstanceProfileAssociation
            - iam:ListInstanceProfiles
            - iam:PassRole
            Resource: "*"

################## LAMBDA BOOTSTRAP FUNCTION ################

  WorkshopBootstrapInstanceLambda:
    Description: Bootstrap Cloud9 instance
    Type: Custom::WorkshopBootstrapInstanceLambda
    DependsOn:
    - WorkshopBootstrapInstanceLambdaFunction
    - WorkshopInstance
    - WorkshopInstanceProfile
    - WorkshopLambdaExecutionRole
    Properties:
      Tags:
        - Key: Environment
          Value: AWS Workshop
      ServiceToken:
        Fn::GetAtt:
        - WorkshopBootstrapInstanceLambdaFunction
        - Arn
      REGION:
        Ref: AWS::Region
      StackName:
        Ref: AWS::StackName
      EnvironmentId:
        Ref: WorkshopInstance
      LabIdeInstanceProfileName:
        Ref: WorkshopInstanceProfile
      LabIdeInstanceProfileArn:
        Fn::GetAtt:
        - WorkshopInstanceProfile
        - Arn

  WorkshopBootstrapInstanceLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Tags:
        - Key: Environment
          Value: AWS Workshop
      Handler: index.lambda_handler
      Role:
        Fn::GetAtt:
        - WorkshopLambdaExecutionRole
        - Arn
      Runtime: python3.9
      MemorySize: 256
      Timeout: '600'
      Code:
        ZipFile: |
          import boto3
          import botocore
          import traceback
          import cfnresponse

          import logging
          logger = logging.getLogger()
          logger.setLevel(logging.INFO)
          
          def restart_instance(instance_id):
              logger.info('Restart EC2 instance to restart SSM Agent')
              ec2 = boto3.client('ec2')

              try:
                  response = ec2.reboot_instances(
                      InstanceIds=[
                          instance_id
                      ]
                  )
              except botocore.exceptions.ClientError as error:
                  raise error

              logger.info('response: %s', response)

          def lambda_handler(event, context):
            try:
              logger.info('event: {}'.format(event))

              # Steps to do on Cloudformation Delete Request
              if event['RequestType'] == 'Delete':
                logger.info('Received Delete Request')

              # Steps to do on Cloudformation Update requests
              if event['RequestType'] == 'Update':
                logger.info('Received Update Request')

              # Steps to do on Cloudformation Create requests
              if event['RequestType'] == 'Create':
                # Open AWS clients
                ec2 = boto3.client('ec2')

                # Get the Instance Information of the Cloud9 IDE
                instance = ec2.describe_instances(Filters=[{'Name': 'tag:Name','Values': ['*' + event['ResourceProperties']['EnvironmentId']]}])['Reservations'][0]['Instances'][0]

                # Create the IamInstanceProfile request object
                iam_instance_profile = {
                    'Arn': event['ResourceProperties']['LabIdeInstanceProfileArn'],
                    'Name': event['ResourceProperties']['LabIdeInstanceProfileName']
                }

                # attach instance profile
                response = ec2.associate_iam_instance_profile(IamInstanceProfile=iam_instance_profile, InstanceId=instance['InstanceId'])
                # Restart the instance
                restart_instance(instance['InstanceId'])

                logger.info('Received Create Request - Completed for : ' + instance['InstanceId'])

            # Catch any exceptions
            except Exception as e:
                logger.error(e)
                traceback.format_exc()

            # Always respond back to Cloudformation so it isn't in excessive pending state
            finally:
              cfnresponse.send(event, context, cfnresponse.SUCCESS, {})

                      
################## SSM BOOTSRAP HANDLER ###############
  WorkshopOutputBucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Delete

  WorkshopSSMDocument: 
    Type: AWS::SSM::Document
    Properties: 
      Tags:
        - Key: Environment
          Value: AWS Workshop
      Content: Yaml
      DocumentType: Command
      Content: 
        schemaVersion: '2.2'
        description: Bootstrap Cloud9 Instance
        mainSteps:
        - action: aws:runShellScript
          name: Workshopbootstrap
          inputs:
            timeoutSeconds: '600'
            runCommand:
            - "#!/bin/bash"
            - date
            - echo LANG=en_US.utf-8 >> /etc/environment
            - echo LC_ALL=en_US.UTF-8 >> /etc/environment
            ### Remove old awscli and install newest aws cli from pip, packaged version of awscli does not have switch to disable managed temporary credentials ###
            - echo '=== INSTALL and CONFIGURE default software components ==='
            - yum -y remove awscli
            - python3 -m pip install --upgrade pip
            - /usr/bin/python3 -m pip install --upgrade awscli
            - . /home/ec2-user/.bashrc
            - echo '=== Resizing the Instance volume'
            - !Sub export AWS_REGION=${AWS::Region}
            - !Sub export ACCOUNT_ID=${AWS::AccountId}
            - !Sub export SIZE=${WorkshopInstanceVolumeSize}
            - !Sub export DEFAULT_GIT_BRANCH=${DefaultIdpBuilderBranch}
            ### After changing disk size, it won't be reflected in OS until reboot ###
            - |
              /usr/bin/python3 -m pip install --user --upgrade boto3
              export instance_id=$(TOKEN=`curl -s -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` && curl -s -H "X-aws-ec2-metadata-token: $TOKEN"  http://169.254.169.254/latest/meta-data/instance-id)
              /usr/bin/python3 -c "import boto3
              import os
              from botocore.exceptions import ClientError 
              ec2 = boto3.client('ec2', region_name = os.getenv('AWS_REGION'))
              volume_info = ec2.describe_volumes(
                Filters=[
                  {
                    'Name': 'attachment.instance-id',
                    'Values': [
                      os.getenv('instance_id')
                    ]
                  }
                ]
              )
              volume_id = volume_info['Volumes'][0]['VolumeId']
              try:
                resize = ec2.modify_volume(    
                  VolumeId=volume_id,    
                  Size=int(os.getenv('SIZE'))
                )
                print(resize)
              except ClientError as e:
                if e.response['Error']['Code'] == 'InvalidParameterValue':
                  print('ERROR MESSAGE: {}'.format(e))"
            - echo '=== CONFIGURE awscli and setting ENVIRONMENT VARS ==='
            - |
              mkdir -p /home/ec2-user/.aws
              echo "[default]" > /home/ec2-user/.aws/config
              echo "output = json" >> /home/ec2-user/.aws/config
              echo "region = ${AWS_REGION}" >> /home/ec2-user/.aws/config
              chmod 600 /home/ec2-user/.aws/config
            - echo "export ACCOUNT_ID=${ACCOUNT_ID}" | tee -a /home/ec2-user/.bash_profile
            - echo "export AWS_REGION=${AWS_REGION}" | tee -a /home/ec2-user/.bash_profile
            - echo "export DEFAULT_GIT_BRANCH=${DEFAULT_GIT_BRANCH}" | tee -a /home/ec2-user/.bash_profile
            ### Disable Temporary credentials on login ###
            - echo 'aws cloud9 update-environment --environment-id $C9_PID --managed-credentials-action DISABLE --region $AWS_REGION &> /dev/null' | tee -a /home/ec2-user/.bash_profile
            - echo 'rm -vf ${HOME}/.aws/credentials  &> /dev/null' | tee -a /home/ec2-user/.bash_profile
            ### Workshop Specific ###
            ### You can add any workshop specific commands and run them here ###
            # Set Hop limit to 3
            - aws ec2 modify-instance-metadata-options --instance-id $instance_id --http-put-response-hop-limit 3 --http-endpoint enabled --region $AWS_REGION
            - |
              ####################
              ##  Tools Install ##
              ####################

              # Install jq (json query)
              sudo yum -y -q install jq

              # Install Kind
              sudo curl --silent --location -o /usr/local/bin/kind https://kind.sigs.k8s.io/dl/v0.22.0/kind-linux-amd64
              chmod +x /usr/local/bin/kind

              # Install kubectl
              sudo curl --silent --location -o /usr/local/bin/kubectl \
                https://s3.${AWS_REGION}.amazonaws.com/amazon-eks/1.27.9/2024-01-04/bin/linux/amd64/kubectl
              sudo chmod +x /usr/local/bin/kubectl

              # populate kubectl bash-completion
              echo "source <(kubectl completion bash)" >> /home/ec2-user/.bash_completion
              echo ". /etc/profile.d/bash_completion.sh" >> /home/ec2-user/.bashrc
              echo ". ~/.bash_completion" >> /home/ec2-user/.bashrc
              echo "alias k=kubectl" >> /home/ec2-user/.bashrc

              # Clone idpbuilder
              cd /home/ec2-user/environment/
              git clone -b ${DEFAULT_GIT_BRANCH} https://github.com/cnoe-io/idpbuilder
              wget https://github.com/cnoe-io/idpbuilder/releases/latest/download/idpbuilder-linux-amd64.tar.gz
              tar -C /usr/local/bin -xvzf idpbuilder-linux-amd64.tar.gz idpbuilder

              # Run replace script for ref-implementation example
              cd /home/ec2-user/environment/idpbuilder/examples/ref-implementation
              sh replace.sh $C9_PID.vfs.cloud9.$AWS_REGION.amazonaws.com 443
              ################################
              ##  End of Script For End User ##
              ################################
            ### General Cleanup and reboot ###
            - echo '=== CLEANING /home/ec2-user ==='
            - rm -vf /home/ec2-user/.aws/credentials
            - for f in cloud9; do rm -rf /home/ec2-user/$f; done
            - chown -R ec2-user:ec2-user /home/ec2-user/
            - echo '=== PREPARE REBOOT in 1 minute with at ==='
            - FILE=$(mktemp) && echo $FILE && echo '#!/bin/bash' > $FILE && echo 'reboot -f' >> $FILE && at now + 1 minute -f $FILE
            - echo "Bootstrap completed with return code $?"
  
  WorkshopBootstrapAssociation: 
    Type: AWS::SSM::Association
    DependsOn: 
      - WorkshopOutputBucket
      - WorkshopInstance
      - WorkshopBootstrapInstanceLambda
    Properties: 
      Name: !Ref WorkshopSSMDocument
      OutputLocation: 
        S3Location:
          OutputS3BucketName: !Ref WorkshopOutputBucket
          OutputS3KeyPrefix: bootstrapoutput
      Targets:
        - Key: tag:SSMBootstrap
          Values:
            - Active

################## INSTANCE #####################
  WorkshopInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: WorkshopRole

  WorkshopInstance:
    Description: "-"
    Type: AWS::Cloud9::EnvironmentEC2
    Properties:
      Description: AWS Cloud9 instance for Workshops
      AutomaticStopTimeMinutes: 60
      ImageId: amazonlinux-2023-x86_64
      SubnetId: !Ref PublicSubnet1
      InstanceType:
        Ref: WorkshopInstanceType
      Name:
        Ref: AWS::StackName
      OwnerArn: !Join
        - ''
        - - 'arn:'
          - !Ref AWS::Partition
          - ':sts::'
          - !Ref AWS::AccountId
          - ':assumed-role/'
          - !Ref WorkshopInstanceOwner
      Tags: 
        - 
          Key: SSMBootstrap
          Value: Active
        - 
          Key: Environment
          Value: AWS Workshop

Outputs: 
  Cloud9IDE:
    Value:
      Fn::Join:
      - ''
      - - https://
        - Ref: AWS::Region
        - ".console.aws.amazon.com/cloud9/ide/"
        - Ref: WorkshopInstance
        - "?region="
        - Ref: AWS::Region
  PreviewAppUrl:
    Value:
      Fn::Join:
      - ''
      - - https://
        - Ref: WorkshopInstance
        - ".vfs.cloud9."
        - Ref: AWS::Region
        - ".amazonaws.com"
